omschrijving van de grade + assess pagina aangepast op tvo homepagina

--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -258,7 +258,7 @@ MASTERPLAN DIGITAAL TOETSEN
                                 <!-- Titel -->
                                 <div class="content-box pad-box-mini border border-b">
                                     <h4><span style="color: #0645ad; font-size: 14pt;"><em>Assessment and grades</em></span></h4>
-                                    <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>How to asses the exam and how to <strong>find grades in Canvas Final Grades</strong>.</em></span></span></p>
+                                    <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>How to <strong>grade and analyse</strong> the exam and <strong>export the grades to Canvas</strong>.</em></span></span></p>
                                 </div>
 
 
