regional format instructie uitgebreid en een sterretje toegevoegd

--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -38,7 +38,7 @@
         <div class="styleguide-section__grid-demo-element">
             <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; border-color: #0645ad; border-width: 1.5px; padding-top: 30px; padding-right: 30px; padding-left: 30px; text-align: left; min-height: 200px;">
                 <h4><span style="color: #000000; font-size: 14pt;"><strong><em>Assessment and grades</em> <i class="icon-document"></i></strong></span></h4>
-                <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>Read how to grade the exam, analyse and adjust the exam scores, and how to find export your TestVision grades. Only the steps marked with a  <i class="icon-star"></i>  are required to succesfully grade a TestVision exam and export the grades.</em></span></span></p>
+                <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>Read how to grade the exam, analyse and adjust the exam scores, and how to find export your TestVision grades. Steps marked with a  <i class="icon-star"></i>  are recommended to succesfully grade a TestVision exam and export the grades to Canvas.</em></span></span></p>
             </div>
         </div>
     </div>
@@ -68,7 +68,7 @@
                     <h4><i class="icon-stats"></i> <span style="color: #000000;"> <strong> <span style="font-size: 15pt;"> &nbsp; &nbsp; Analyse &amp; adjust scores</span></strong></span></h4>
                     <p><span style="color: #34495e;"><em> </em></span></p>
                 </div>
-                <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_A1"> <span style="color: #000000;"> 2.1 &nbsp; Analyse exam results</span> </a> </span></p>
+                <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_A1"> <span style="color: #000000;"> <i class="icon-star"></i> &nbsp; 2.1 &nbsp; Analyse exam results</span> </a> </span></p>
                 <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_A2"> <span style="color: #000000;"> 2.2 &nbsp; Mark questions as correct</span> </a> </span></p>
                 <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_A3"> <span style="color: #000000;"> 2.3 &nbsp; Mark specific answers as correct for all students (modify answer key)</span> </a> </span></p>
                 <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_A4"> <span style="color: #000000;"> 2.4 &nbsp; Regrade questions for individual students</span> </a> </span></p>
@@ -1245,7 +1245,7 @@
                 </tr>
                 <tr>
                     <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
-                    <td style="width: 89.5941%; border-style: hidden;">You can set your regional format under <u>Settings</u> > <u>Time & Languague</u> > <u>Region</u> > <u>Regional Format</u>. Select <u>English (United States)</u> if TestVision is set to English. Select <u>Dutch (Netherlands)</u> if TestVision is set to Dutch. This tutorial uses English (United States), as TestVision is set to English.
+                    <td style="width: 89.5941%; border-style: hidden;">You can set your regional format of your PC under <u>Windows icon</u> > <u>Settings</u> > <u>Time & Languague</u> > <u>Region</u> > <u>Regional Format</u>. Select <u>English (United States)</u> if TestVision is set to English. Select <u>Dutch (Netherlands)</u> if TestVision is set to Dutch. This tutorial uses English (United States), as TestVision is set to English.
                         <p><span class="element_toggler" role="button" aria-controls="regional-format-3-1" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>How to navigate to the regional format settings</em></span> </span></p>
                         <div id="regional-format-3-1" style="display: none; color: #6096e6;">
                             <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL">
