new design TVO menus

--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -1,48 +1,29 @@
-<div>
-    <p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/5129479/preview" alt="2021:22bannertvo-1.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5129479" data-api-returntype="File" /></p>
-</div>
+<!-- Banner -->
+<p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/5129479/preview" alt="2021:22bannertvo-1.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5129479" data-api-returntype="File" /></p>
+
+<!-- Back to top -->
 <p><a id="topmenu"></a></p>
+
+<!-- Menubalk -->
 <div class="grid-row">
     <div class="col-xs-12 col-md-12">
         <div class="styleguide-section__grid-demo-element">
-            <nav class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;"><a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i> <span>&nbsp;Home</span> </a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/inspection" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/inspection"><span style="color: #08a8a2;"><i class="icon-student-view"></i><strong>&nbsp;Inspection</strong></span></a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/overview-testvision-manuals">&nbsp;<i class="icon-collection">&nbsp;</i>Extensive instructions</a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i><span>&nbsp;Contact</span></a></nav>
-        </div>
-    </div>
-</div>
-<div class="grid-row">
-    <div class="col-xs-20 col-md-4">
-        <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; padding: 20px; text-align: left; height: 200px;">
-                <div class="content-box pad-box-mini border border-b">
-                    <h4><span style="color: #34495e; font-size: 14pt;"><em>Creating the exam</em></span></h4>
-                </div>
-                <a class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page">
-                    <h5><span style="font-size: 13pt; color: #000000;">View instructions <i class="icon-document"></i></span></h5>
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-20 col-md-4">
-        <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; padding: 20px; text-align: left; height: 200px;">
-                <div class="content-box pad-box-mini border border-b">
-                    <h4><span style="color: #34495e; font-size: 14pt;"><em>Moment of examination</em></span></h4>
-                </div>
-                <a class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" data-api-returntype="Page">
-                    <h5><span style="font-size: 13pt; color: #000000;">View FAQ <i class="icon-document"></i></span></h5>
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-md-4">
-        <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; border-color: #0645ad; border-width: 1.5px; padding-top: 30px; padding-right: 30px; padding-left: 30px; text-align: left; min-height: 200px;">
-                <h4><span style="color: #000000; font-size: 14pt;"><strong><em>Assessment and grades</em> <i class="icon-document"></i></strong></span></h4>
-                <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>Read how to grade the exam, analyse and adjust the exam scores, and how to find export your TestVision grades. Steps marked with a  <i class="icon-star"></i>  are recommended to succesfully grade a TestVision exam and export the grades to Canvas.</em></span></span></p>
+            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #000000;"><i class="icon-home"></i>&nbsp;TestVision</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test"><span style="color: #ffffff;"><i class="icon-edit"></i>&nbsp;&nbsp;Creating the exam&nbsp;</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination"><span style="color: #ffffff;"><i class="icon-document"></i>&nbsp;&nbsp;Examination&nbsp;</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#E5E5E5;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment"><span style="color: #000000;"><i class="icon-analytics"></i>&nbsp;&nbsp;Assessment & grades&nbsp;</span></a>
             </div>
         </div>
     </div>
 </div>
+
+<!-- Blockquote -->
+<blockquote style="padding-top: 10px; padding-bottom: 10px;"><span style="color: #34495e;">
+    <p>Read how to grade the exam, analyse and adjust the exam scores, and how to find export your TestVision grades. Steps marked with a  <i class="icon-star"></i>  are recommended to succesfully grade a TestVision exam and export the grades to Canvas.</p>
+</span></blockquote>
+
+
 <div class="grid-row">
     <div class="col-xs-12 col-md-4">
         <div class="styleguide-section__grid-demo-element">
