--- a/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
@@ -9,68 +9,27 @@
     <div class="col-xs-12 col-md-12">
         <div class="styleguide-section__grid-demo-element">
             <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i> <span>&nbsp;Home</span> </a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/inspection" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/inspection"><span style="color: #08a8a2;"><i class="icon-student-view"></i><strong>&nbsp;Inspection</strong></span></a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals" data-api-returntype="Page">&nbsp;<i class="icon-collection">&nbsp;</i>Extensive instructions</a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i><span>&nbsp;Contact</span></a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #000000;"><i class="icon-home"></i>&nbsp;TestVision</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test"><span style="color: #ffffff;"><i class="icon-edit"></i>&nbsp;&nbsp;Creating the exam&nbsp;</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#E5E5E5;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination"><span style="color: #000000;"><i class="icon-document"></i>&nbsp;&nbsp;Examination&nbsp;</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment"><span style="color: #ffffff;"><i class="icon-analytics"></i>&nbsp;&nbsp;Assessment & grades&nbsp;</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/inspection" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/inspection"><span style="color: #ffffff;"><i class="icon-student-view"></i>&nbsp;&nbsp;Inspection&nbsp;</span></a>
             </div>
         </div>
     </div>
 </div>
 
-<!--<h3 style="text-align: center;">TestVision instructions</h3>-->
-
-<div class="grid-row">
-
-    <!-- Questions + test -->
-    <div class="col-xs-20 col-md-4">
-        <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; padding: 20px; text-align: left; height: 200px;">
-                <div class="content-box pad-box-mini border border-b">
-                    <h4><span style="color: #34495e; font-size: 14pt;"><em>Creating the exam</em></span></h4>
-                </div>
-                <a id="" class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page">
-                    <h5><span style="font-size: 13pt; color: #000000;">View instructions <i class="icon-document"></i></span></h5>
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <!-- Moment of examination -->
-    <div class="col-xs-20 col-md-4">
-        <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; border-color: #0645ad; border-width: 1.5px; padding-top: 30px; padding-right: 30px; padding-left: 30px; text-align: left; height: 200px;">
-                <h4><span style="color: #000000; font-size: 14pt;"><strong><em>Moment of exam</em>  <i class="icon-document"></i></strong></span></h4>
-                <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>We've listed down the most Frequently Asked Questions by teachers and students. Review the questions below to familiarize yourself with the exam process.</em></span></span></p>
-            </div>
-        </div>
-    </div>
-
-    <!-- Assessments -->
-    <div class="col-xs-20 col-md-4">
-        <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; padding: 20px; text-align: left; height: 200px;">
-                <div class="content-box pad-box-mini border border-b">
-                    <h4><span style="color: #34495e; font-size: 14pt;"><em>Assessment and grades</em></span></h4>
-                </div>
-                <a id="" class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment" data-api-returntype="Page">
-                    <h5><span style="font-size: 13pt; color: #000000;">View instructions <i class="icon-document"></i></span></h5>
-                </a>
-            </div>
-        </div>
-    </div>
-
-</div>
-
-
+<!-- Blockquote -->
+<blockquote style="padding-top: 10px; padding-bottom: 10px;"><span style="color: #34495e;">
+    <p>We've listed down the most Frequently Asked Questions by teachers and students. Review the questions below to familiarize yourself with the exam process. You can also share a FAQ page directly with students.</p>
+</span></blockquote>
 
 <div class="grid-row">
     <!-- rechterzijde -->
     <div class="col-xs-20 col-md-12">
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #0645ad; border-width: 1.5px; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fafafa;">
 
-            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>FAQ Teachers</em>  <i class="icon-document"></i></strong></span></p></h3>
+            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>FAQ about moment of examination</em></i></strong></span></p></h3>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">I made a few late adjustments to the exam in TestVision. What do I need to do?</a></span></p>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ2">What do students need to bring to the exam?</a></span></p>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ3">How long in advance do I need to be present at the location?</a></span></p>
