--- a/A-Z/Exams/TestVision/22-23/6_Inspection_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/6_Inspection_22-23.html
@@ -1,7 +1,3 @@
-<!--
-https://canvas.uva.nl/courses/8175/pages/inspection
--->
-
 <!-- Banner -->
 <p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/5129479/preview" alt="2021:22bannertvo-1.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5129479" data-api-returntype="File" /></p>
 
@@ -13,23 +9,24 @@ https://canvas.uva.nl/courses/8175/pages/inspection
     <div class="col-xs-12 col-md-12">
         <div class="styleguide-section__grid-demo-element">
             <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i> <span>&nbsp;Home</span> </a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a>
-                <a class="btn Button" style="margin: 5px; background-color:#E5E5E5"><span style="color: #08a8a2;"><i class="icon-student-view"></i><strong>&nbsp;Inspection</strong></span></a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals" data-api-returntype="Page">&nbsp;<i class="icon-collection">&nbsp;</i>Extensive instructions</a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i><span>&nbsp;Contact</span></a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #000000;"><i class="icon-home"></i>&nbsp;TestVision</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test"><span style="color: #ffffff;"><i class="icon-edit"></i>&nbsp;&nbsp;Creating the exam&nbsp;</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination"><span style="color: #ffffff;"><i class="icon-document"></i>&nbsp;&nbsp;Examination&nbsp;</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment"><span style="color: #ffffff;"><i class="icon-analytics"></i>&nbsp;&nbsp;Assessment & grades&nbsp;</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#E5E5E5"><span style="color: #000000;"><i class="icon-student-view"></i>&nbsp;Inspection</span></a>
             </div>
         </div>
     </div>
 </div>
 
-<!--
-<p style="text-align: center;"><span style="font-size: 17pt;"><strong>More info coming soon </strong></span></p>
-<hr />
-<br>
-<p style="text-align: center;"><span style="font-size: 13pt; float: middle;">This page is not fully updated yet. For now, please visit our
-<a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><strong><em>extensive instructions</em></strong></a>.</span></p>
--->
+<!-- Blockquote
+<blockquote style="padding-top: 10px; padding-bottom: 10px;"><em> <span style="color: #34495e;">There are roughly two ways to do the inspection: inspection with support or without support. If you want to do an inspection with support you should notify your programme coordinator at least 7 weeks prior to the inspection date. The advantage of an inspection with support is that it increases the possibility of reusing test questions. Without support, students can easily take a picture, screenshot or copy the test questions via laptop or phone. However, without support, you can simply email us a date and time to setup the inspection and we will send you the login instructions for students.</span> </em></blockquote>-->
+
+<!-- Blockquote -->
+<blockquote style="padding-top: 10px; padding-bottom: 10px;"><span style="color: #34495e;">
+    <p>There are roughly two ways to do the inspection: inspection with support or without support. If you want to do an inspection with support you should notify your programme coordinator at least 7 weeks prior to the inspection date.</p>
+    <p><em>The advantage of an inspection with support</em> is that it increases the possibility of reusing test questions. Without support, students can easily take a picture, screenshot or copy the test questions via laptop or phone. If you decide to print the students' results you can control this more easily, but this can be difficult in large courses with more than 200 students. <em>The advantage of an inspection without support</em> is that you can email us and decide to do the inspection at your own time and place. We will set up the inspection in TestVision and send you the login instructions for students.</p>
+</span></blockquote>
 
 
 <div class="grid-row">
