--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -20,7 +20,7 @@
 
 <!-- Blockquote -->
 <blockquote style="padding-top: 10px; padding-bottom: 10px;"><span style="color: #34495e;">
-    <p>Read how to grade the exam, analyse and adjust the exam scores, and how to find export your TestVision grades. Steps marked with a  <i class="icon-star"></i>  are recommended to succesfully grade a TestVision exam and export the grades to Canvas.</p>
+    <p>Read how to grade the exam, analyse and adjust the exam scores, and how to export your TestVision grades. Steps marked with a  <i class="icon-star"></i>  are recommended to succesfully grade a TestVision exam and export the grades to Canvas.</p>
 </span></blockquote>
 
 
