Nieuwe TestVision homepage

--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -72,7 +72,7 @@ MASTERPLAN DIGITAAL TOETSEN
 <!-- Back to top -->
 <p><a id="topmenu"></a></p>
 
-<!-- Menubalk -->
+<!-- Menubalk
 <div class="grid-row">
     <div class="col-xs-12 col-md-12">
         <div class="styleguide-section__grid-demo-element">
@@ -87,6 +87,21 @@ MASTERPLAN DIGITAAL TOETSEN
                 <a class="btn Button" style="border-color: #063852; margin: 5px;" href="https://uvasocialsciences.eu.qualtrics.com/jfe/form/SV_6LN3bIFUlzyJ95k" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-compose"></i> <span>&nbsp;</span>Send us your feedback</a></div>
         </div>
     </div>
+</div>-->
+
+<!-- Menubalk -->
+<div class="grid-row">
+    <div class="col-xs-12 col-md-12">
+        <div class="styleguide-section__grid-demo-element">
+            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
+                <a class="btn Button" style="margin: 5px; background-color:#E5E5E5"><span style="color: #000000;"><i class="icon-home"></i>&nbsp;TestVision</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test"><span style="color: #ffffff;"><i class="icon-edit"></i>&nbsp;&nbsp;Create exam&nbsp;</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination"><span style="color: #ffffff;"><i class="icon-document"></i>&nbsp;&nbsp;Examination&nbsp;</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment"><span style="color: #ffffff;"><i class="icon-analytics"></i>&nbsp;&nbsp;Assessment & grades&nbsp;</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/inspection" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/inspection"><span style="color: #ffffff;"><i class="icon-student-view"></i>&nbsp;&nbsp;Inspection&nbsp;</span></a>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- Tabs -->
@@ -99,7 +114,7 @@ MASTERPLAN DIGITAAL TOETSEN
                 </div>
             </a>
         </li>
-        <li>
+        <!--<li>
             <a href="#tab-1" style="background-color: #ffffff;">
                 <div class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;">
                     <span style="font-size: 13pt;"><strong>Instructions</strong></span>
@@ -112,7 +127,7 @@ MASTERPLAN DIGITAAL TOETSEN
                     <span style="font-size: 13pt;"><strong>About the inspection</strong></span>
                 </div>
             </a>
-        </li>
+        </li>-->
         <li>
             <a href="#tab-3" style="background-color: #ffffff;">
                 <div class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;">
@@ -178,11 +193,11 @@ MASTERPLAN DIGITAAL TOETSEN
                     </div>
                     <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: auto; background-color: #ffffff;">
                         <p>The ICTO team <span style="color: #079C97;"><strong>sets up a copy of last year's exam with copies of last year's questions and test settings</strong></span> – or if this is your first time, we'll set up concept questions and assign basic settings to the exam.</p>
-                        <p>Teachers are solely responsible for <a href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test#FAQ_Q2" target="_blank">modifying the questions</a> in TestVision. Questions can be changed by teachers until the last moment. A request for adding new questions to the test or changing test settings can be sent to ICTO up to one week before the start of the test. After this deadline, teachers can also do these things themselves with the help of <a href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test#FAQ_Q4" target="_blank">these instructions</a>.</p>
+                        <p>Teachers are solely responsible for <a href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test#FAQ_Q2" target="_blank">modifying the questions</a> in TestVision. Questions can be changed by teachers until the last moment. A request for adding new questions to the test or changing test settings can be sent to ICTO up to one week before the start of the test. After this deadline, teachers can also do these things themselves with the help of <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals" target="_blank">these instructions</a>.</p>
                     </div>
                 </div>
 
-                <!-- TestVision updates -->
+                <!-- TestVision updates
                 <div class="styleguide-section__grid-demo-element">
                     <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center; padding-left: 15px;">
                         <h4 style="text-align: left;"><strong>What's new in TestVision?</strong></h4>
@@ -190,7 +205,7 @@ MASTERPLAN DIGITAAL TOETSEN
                     <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: auto; background-color: #ffffff;">
                         <p style="color: #676767;"><i>More info coming soon...</i></p>
                     </div>
-                </div>
+                </div>-->
 
             </div>
 
@@ -198,18 +213,17 @@ MASTERPLAN DIGITAAL TOETSEN
 
     </div>
 
+    <!--
     <div id="tab-1" style="background-color: #ffffff; height: auto; padding-bottom: 50px;">
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #ffffff; padding-left: 15px; padding-right: 15px; height: auto; background-color: #ffffff;">
 
             <div class="grid-row">
 
-                <!-- Questions + Test -->
                 <div class="col-xs-20 col-md-4">
                     <div class="styleguide-section__grid-demo-element">
                         <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; border-color: #063852; padding: 30px; padding-bottom: 50px; margin-bottom: 10px; text-align: left; height: 380px;">
                             <span style="float: middle; font-size: 12pt;">
 
-                                <!-- Titel -->
                                 <div class="content-box pad-box-mini border border-b">
                                     <h4><span style="color: #0645ad; font-size: 14pt;"><em>Exam settings</em></span></h4>
                                     <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>We make a <strong>copy of your previous questions and test</strong> (4 weeks in advance).</em></span></span></p>
@@ -226,18 +240,15 @@ MASTERPLAN DIGITAAL TOETSEN
                     </div>
                 </div>
 
-                <!-- FAQ -->
                 <div class="col-xs-20 col-md-4">
                     <div class="styleguide-section__grid-demo-element">
                         <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; border-color: #063852; padding: 30px; padding-bottom: 50px; margin-bottom: 10px; text-align: left; height: 380px;">
                             <span style="float: middle; font-size: 12pt; ">
 
-                                <!-- Titel -->
                                 <div class="content-box pad-box-mini border border-b">
                                     <h4><span style="color: #0645ad; font-size: 14pt;"><em>Moment of examination</em></span></h4>
                                     <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>We've listed down the most <strong>Frequently Asked Questions</strong> by teachers.</em></span></span></p>
                                 </div>
-
 
                                 <a id="" class="Button Button--large" style="border-width: 1.5px; border-color: #079C97; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 20px; padding-bottom: 20px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" data-api-returntype="Page">
                                     <h5><span style="font-size: 14pt; color: #000000;">View FAQ <i class="icon-document"></i></span></h5>
@@ -249,18 +260,15 @@ MASTERPLAN DIGITAAL TOETSEN
                     </div>
                 </div>
 
-                <!-- Assessment -->
                 <div class="col-xs-20 col-md-4">
                     <div class="styleguide-section__grid-demo-element">
                         <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; border-color: #063852; padding: 30px; padding-bottom: 50px; margin-bottom: 10px; text-align: left; height: 380px;">
                             <span style="float: middle; font-size: 12pt;">
 
-                                <!-- Titel -->
                                 <div class="content-box pad-box-mini border border-b">
                                     <h4><span style="color: #0645ad; font-size: 14pt;"><em>Assessment and grades</em></span></h4>
                                     <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>How to <strong>grade and analyse</strong> the exam and <strong>export the grades to Canvas</strong>.</em></span></span></p>
                                 </div>
-
 
                                 <a id="" class="Button Button--large" style="border-width: 1.5px; border-color: #079C97; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 20px; padding-bottom: 20px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment" data-api-returntype="Page">
                                     <h5><span style="font-size: 14pt; color: #000000;">View instructions <i class="icon-document"></i></span></h5>
@@ -272,13 +280,10 @@ MASTERPLAN DIGITAAL TOETSEN
                     </div>
                 </div>
             </div>
-
-            <!-- Uitgebreide instructies -->
             <hr />
             <br>
             <p style="text-align: center;"><span style="font-size: 13pt; float: middle;">Some of the instructions above are not fully updated yet. If any details are missing, please visit our
             <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><strong><em>extensive instructions</em></strong></a>.</span></p>
-
         </div>
     </div>
 
@@ -308,15 +313,17 @@ MASTERPLAN DIGITAAL TOETSEN
                 </tbody>
             </table>
         </div>
-    </div>
+    </div>-->
 
     <div id="tab-3" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
+
+        <!-- TLC -->
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 15px; height: auto; background-color: #fafafa;">
-            <table style="border-collapse: collapse; width: 100.812%;" border="0">
+            <table style="border-collapse: collapse; width: 100.812%; border="0">
                 <tbody>
                     <tr>
                         <td style="width: 19.3883%;">
-                            <p style="text-align: center;"><span style="color: #3598db; font-size: 17pt;"> <span style="color: #079C97;"><strong>Workshop Harry Molkenboer</strong> </span> </span></p>
+                            <p style="text-align: center;"><span style="color: #3598db; font-size: 17pt;"> <span style="color: #000000;"><strong>Assessment cycle</strong> </span> </span></p>
                             <p>&nbsp;</p>
                         </td>
                         <td style="width: 4.404%;">
@@ -324,13 +331,48 @@ MASTERPLAN DIGITAAL TOETSEN
                         </td>
                         <td style="width: 56.2347%;">
                             <div class="styleguide-section__grid-demo-element">
-                                <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
-                                    <li><span style="color: #ffffff;"><strong>Test design</strong></span></li>
+                                <ul class="pill" style="background: #a60f0f; margin-top: 20px; margin-right: 8px;">
+                                    <li><span style="color: #ffffff;"><strong>TLC</strong></span></li>
                                 </ul>
-                                <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
+                                <ul class="pill" style="background: #6dd1ce; margin-top: 20px; margin-right: 8px;">
+                                    <li><span style="color: #ffffff;"><strong>Designing & constructing</strong></span></li>
+                                </ul>
+                                <ul class="pill" style="background: #6dd1ce; margin-top: 20px; margin-right: 8px;">
+                                    <li><span style="color: #ffffff;"><strong>Inspiration</strong></span></li>
+                                </ul>
+                            </div>
+                            <p><span style="color: #5a5a5a;">How do you design effective assessment of student learning? The assessment cycle can help you with this. The cycle consists of seven stages that each have their own place within the assessment process. In each of the chapters, you will find a brief introduction outlining key concerns, followed by frequently asked questions and answers.</i></span></p>
+                        </td>
+                        <td style="width: 4.47733%;">
+                            <p><strong>&nbsp;</strong></p>
+                        </td>
+                        <td style="width: 22.3964%;"><a class="btn Button" style="margin: 5px;" href="https://tlc.uva.nl/en/article-category/assessment/?faculty=55" data-api-endpoint="https://tlc.uva.nl/en/article-category/assessment/?faculty=55" data-api-returntype="Page"><i class="icon-arrow-right"></i> <span>&nbsp;View more</span> </a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Harry Molkenboer-->
+        <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 15px; height: auto; background-color: #fafafa;">
+            <table style="border-collapse: collapse; width: 100.812%; border="0">
+                <tbody>
+                    <tr>
+                        <td style="width: 19.3883%;">
+                            <p style="text-align: center;"><span style="color: #3598db; font-size: 17pt;"> <span style="color: #000000;"><strong>Workshop multiple choice questions</strong> </span> </span></p>
+                            <p>&nbsp;</p>
+                        </td>
+                        <td style="width: 4.404%;">
+                            <p><strong>&nbsp;</strong></p>
+                        </td>
+                        <td style="width: 56.2347%;">
+                            <div class="styleguide-section__grid-demo-element">
+                                <ul class="pill" style="background: #234d96; margin-top: 20px; margin-right: 8px;">
+                                    <li><span style="color: #ffffff;"><strong>Harry Molkenboer</strong></span></li>
+                                </ul>
+                                <ul class="pill" style="background: #6dd1ce; margin-top: 20px; margin-right: 8px;">
                                     <li><span style="color: #ffffff;"><strong>Multiple choice questions</strong></span></li>
                                 </ul>
-                                <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
+                                <ul class="pill" style="background: #6dd1ce; margin-top: 20px; margin-right: 8px;">
                                     <li><span style="color: #ffffff;"><strong>Instruction videos</strong></span></li>
                                 </ul>
                             </div>
@@ -344,6 +386,7 @@ MASTERPLAN DIGITAAL TOETSEN
                 </tbody>
             </table>
         </div>
+
     </div>
 </div>
 
