--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -9,10 +9,12 @@
     <div class="col-xs-12 col-md-12">
         <div class="styleguide-section__grid-demo-element">
             <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #000000;"><i class="icon-home"></i>&nbsp;TestVision</span></a>
-                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test"><span style="color: #ffffff;"><i class="icon-edit"></i>&nbsp;&nbsp;Creating the exam&nbsp;</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #ffffff;"><i class="icon-home"></i>&nbsp;TestVision</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test"><span style="color: #ffffff;"><i class="icon-edit"></i>&nbsp;&nbsp;Create exam&nbsp;</span></a>
                 <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination"><span style="color: #ffffff;"><i class="icon-document"></i>&nbsp;&nbsp;Examination&nbsp;</span></a>
-                <a class="btn Button" style="margin: 5px; background-color:#E5E5E5;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment"><span style="color: #000000;"><i class="icon-analytics"></i>&nbsp;&nbsp;Assessment & grades&nbsp;</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#E5E5E5;"><span style="color: #000000;"><i class="icon-analytics"></i>&nbsp;&nbsp;Assessment & grades&nbsp;</span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#08a8a2;" href="https://canvas.uva.nl/courses/8175/pages/inspection" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/inspection"><span style="color: #ffffff;"><i class="icon-student-view"></i>&nbsp;&nbsp;Inspection&nbsp;</span></a>
+
             </div>
         </div>
     </div>
@@ -271,7 +273,7 @@
         </table>
     </div>
 </div>
-<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;"><a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px; background-color: #08a8a2; border-color: #c7cdd1;" href="#FAQ_F1"> <i class="icon-forward"></i> <span>&nbsp;Next: Export to Canvas</span> </a></div>
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;"><a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px; background-color: #08a8a2; border-color: #c7cdd1;" href="#FAQ_A1"> <i class="icon-forward"></i> <span>&nbsp;Next: Analyse exam results</span> </a></div>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -574,7 +576,7 @@
         </table>
     </div>
 </div>
-<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;"><a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></div>
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;"><a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px; background-color: #08a8a2; border-color: #c7cdd1;" href="#FAQ_F1"> <i class="icon-forward"></i> <span>&nbsp;Next: Export grades</span> </a></div>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -1493,7 +1495,8 @@
         </tbody>
     </table>
 </div>
-<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;"><a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px; background-color: #c00434; border-color: #c7cdd1;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool#assign-weight" target="_blank"> <i class="icon-forward"></i> <span>&nbsp;Next: Configure the Final Grades calculation</span> </a></div>
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;"><a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px; border-color: #c7cdd1;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool#assign-weight"> <i class="icon-forward"></i> <span>&nbsp;Next: Configure the Final Grades calculation</span> </a>
+</div>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
