--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -931,8 +931,8 @@
         <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden; font-size: 13pt;">
             <tbody>
                 <tr style="height: auto;">
-                    <td style="width: 7%%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
-                    <td style="width: 90%%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
+                    <td style="width: 90%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
                 </tr>
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> </strong></td>
