--- a/A-Z/Exams/TestVision/22-23/1_Questions+Test_22-23 CONCEPT.html
+++ b/A-Z/Exams/TestVision/22-23/1_Questions+Test_22-23 CONCEPT.html
@@ -35,7 +35,7 @@
                 <!-- Titel -->
                 <div class="content-box pad-box-mini border border-b">
                     <a id="steps"></a>
-                    <h4><i class="icon-settings"></i> <span style="color: #000000;"> <strong> <span style="font-size: 15pt;"> &nbsp;&nbsp; The basiscs</span></strong></span></h4>
+                    <h4><i class="icon-settings"></i> <span style="color: #000000;"> <strong> <span style="font-size: 15pt;"> &nbsp;&nbsp; The basics</span></strong></span></h4>
                     <p><span style="color: #34495e;"><em> </em></span></p>
                 </div>
 
@@ -1410,6 +1410,100 @@
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4><strong>Import questions</strong></h4>
+</div>
+
+<!-- Instructie -->
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding-bottom: 30px; padding-top: 35px;padding-right:30px">
+    <table style="width: 100%; border-collapse: collapse; border-style: hidden;" border="1">
+        <tbody>
+
+          <tr>
+            <td style="width: 7%; border-style: hidden; text-align: center; vertical-align: top">
+              <strong><span style="font-size: 13pt;">&nbsp;</span></strong>
+            </td>
+            <td style="width: 90%; border-style: hidden">
+              <div class="alert alert"> 
+                <a class="icon-announcement"></a><strong> Please note that,</strong> as a teacher, you are <b>not required</b> to import questions into the test if you use the dummy questions the ICTO team has prepared for you. The instruction below only applies to you if you have decided to take on the task of creating new questions yourself.
+              </div><br>
+            </td>
+           </tr>
+
+            <tr style="padding-bottom: 8px;">
+              <td style="width: 7%; border-style: hidden; text-align: center; vertical-align: top">
+                <strong><span style="font-size: 13pt;">1.</span></strong>
+              </td>
+              <td style="width: 90%; border-style: hidden">
+                <b>Go to the 'Questions' menu and select the relevant folder on the left.</b><br><br>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width: 7%; border-style: hidden; text-align: center; vertical-align: top">
+                <strong><span style="font-size: 13pt;">2.</span></strong>
+              </td>
+              <td style="width: 90%; border-style: hidden">
+                <b>Right-click the question name you'd like to change and select 'Rename'.</b><br><br>
+              </td>
+            </tr>
+
+            <tr>
+                <td style="width: 7%; border-style: hidden; text-align: center; vertical-align: top">
+                  <strong><span style="font-size: 13pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 90%; border-style: hidden">
+                    <img style="width: 50%; border:1px solid grey" id="8015182" src="https://canvas.uva.nl/courses/8175/files/8015182/preview" alt="rename.png" /><br><br>
+                </td>
+            </tr>
+
+            <tr>
+                <td style="width: 7%; border-style: hidden; text-align: center; vertical-align: top">
+                  <strong><span style="font-size: 13pt;">&nbsp;</span></strong>
+                </td>
+                <td style="width: 90%; border-style: hidden">
+                    <i class="icon-info"></i><i>&nbsp; TestVision has several keyboard shortcuts that allow you to perform actions faster. Press [w] to change a question name.</i><br><br>               
+                </td>
+            </tr>
+
+        </tbody>
+    </table>
+</div>
+
+<!-- Buttons -->
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+  <a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i><span>&nbsp;Back to top</span></a>
+  <a class="btn Button--primary" style="margin: 3px; background-color: #08a8a2; border-color: #c7cdd1;" href="#Opt_3"> <i class="icon-forward"></i> <span>&nbsp;Next: Edit test properties</span> </a>
+</div>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<!----------------------------------------- Review test settings: Edit test properties ----------------------------------------->
+<p><a id="Opt_3"></a></p>
+<p>&nbsp;</p>
+
+<!-- Buttons-->
+<h5 style="text-align: center;">
+    <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i>
+        <span>&nbsp;Back to top</span>
+    </a>
+    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a>
+    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" target="_blank" rel="noopener" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i><span>&nbsp;Contact</span></a>
+</h5>
+
+<!-- Header -->
+<hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <h4><strong>Edit test properties</strong></h4>
 </div>
 
 <!-- Instructie -->
