PDF file kaltura toegevoegd

--- a/Nieuwsbrief/22-23-blok5.html
+++ b/Nieuwsbrief/22-23-blok5.html
@@ -294,7 +294,7 @@
           
             <td style="width:50%;vertical-align:top;padding-right:15px">
                 <p style="font-size: 12pt">
-                    Should you (or a student) want to post a video to Kaltura (MyMedia) that contains highly confidential material, then there is now a new option available! If material is marked by the owner as being highly confidential, this means the material can no longer be published, downloaded, edited or embedded. Moreover, the video will automatically be deleted after 183 days. Read more here.
+                    Should you (or a student) want to post a video to Kaltura (MyMedia) that contains highly confidential material, then there is now a new option available! If material is marked by the owner as being highly confidential, this means the material can no longer be published, downloaded, edited or embedded. Moreover, the video will automatically be deleted after 183 days. Read more <a id="8447343" class="instructure_file_link instructure_scribd_file inline_disabled" href="/courses/8175/files/8447343?wrap=1" target="_blank" rel="noopener noreferrer" data-canvas-previewable="true">here</a>.
                 </p>
             </td>
             
