--- a/Homepage/22_23.html
+++ b/Homepage/22_23.html
@@ -95,7 +95,7 @@
             </div>
         </div>
 
-        <!-- New in 2021/22 -->
+        <!-- New in 2022/23 -->
         <div class="col-xs-20 col-md-6">
             <div class="styleguide-section__grid-demo-element" style="text-align: center;">
                 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #E6EBED; border-color: #063852; padding: 30px; padding-bottom: 50px; margin-bottom: 10px; text-align: left;">
@@ -107,7 +107,7 @@
                         <!-- Newsletter -->
                         <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto; margin-top: 20px; padding-bottom: 20px;" title="" href="https://canvas.uva.nl/courses/8175/pages/icto-newsletter" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/icto-newsletter" data-api-returntype="Page">
                             <h5><span style="font-size: 15pt; color: #014AAD;"><strong>ICTO NEWSLETTER</strong></span></h5>
-                            <span style="font-size: 11pt; color: #34495e;"><em>Edition: January 2023, Block 3</em></span>
+                            <span style="font-size: 11pt; color: #34495e;"><em>Edition: March 2023, Block 5</em></span>
                         </a>
 
                     </span>
@@ -146,19 +146,19 @@
                     <span style="float: middle; font-size: 18pt; align: center;">
                         Explore
                         <br>
-                        <a id="" class="Button Button--large" style="width: 92%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 20px; border-color: #063852; title="" href="https://canvas.uva.nl/courses/8175/pages/course-checklist" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/course-checklist" data-api-returntype="Page">
+                        <a id="" class="Button Button--large" style="width: 92%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 20px; border-color: #063852; " href="https://canvas.uva.nl/courses/8175/pages/course-checklist" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/course-checklist" data-api-returntype="Page">
                             <h5><span style="font-size: 14pt; color: #014AAD;">Course checklist</span></h5>
                             <span style="font-size: 10pt; color: #124240;"><em>The essential setup and tips to make your canvas course user friendly.</em></span>
                         </a>
-                        <a id="" class="Button Button--large" style="width: 92%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 20px; border-color: #063852; title="" href="https://datanose.nl/#canvas[FMG]" data-api-endpoint="https://datanose.nl/#canvas[FMG]" data-api-returntype="Page">
+                        <a id="" class="Button Button--large" style="width: 92%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 20px; border-color: #063852; " href="https://datanose.nl/#canvas[FMG]" data-api-endpoint="https://datanose.nl/#canvas[FMG]" data-api-returntype="Page">
                             <h5><span style="font-size: 14pt; color: #014AAD;">Sandbox course</span></h5>
                             <span style="font-size: 10pt; color: #124240;"><em>Create an empty Canvas course for you to practice in.</em></span>
                         </a>
-                        <a id="" class="Button Button--large" style="width: 92%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 20px; border-color: #063852; title="" href="https://canvas.uva.nl/enroll/4TTA6N" data-api-endpoint="https://canvas.uva.nl/enroll/4TTA6N" data-api-returntype="Page">
+                        <a id="" class="Button Button--large" style="width: 92%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 20px; border-color: #063852;" href="https://canvas.uva.nl/enroll/4TTA6N" data-api-endpoint="https://canvas.uva.nl/enroll/4TTA6N" data-api-returntype="Page">
                             <h5><span style="font-size: 14pt; color: #014AAD;">Onboarding student assistents</span></h5>
                             <span style="font-size: 10pt; color: #124240;"><em>Student-assistents can follow this onboarding course to get to know the UvA and learn how to work with the different systems and platforms provided.</em></span>
                         </a>
-                        <a id="" class="Button Button--large" style="width: 92%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 20px; border-color: #063852; title="" href="https://canvas.uva.nl/courses/8175/pages/contact" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/contact" data-api-returntype="Page">
+                        <a id="" class="Button Button--large" style="width: 92%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 20px; border-color: #063852;" href="https://canvas.uva.nl/courses/8175/pages/contact" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/contact" data-api-returntype="Page">
                             <h5><span style="font-size: 14pt; color: #014AAD;">Meet the ICTO team!</span></h5>
                             <span style="font-size: 10pt; color: #124240;"><em>ICTO Social Sciences consists of an enthusiastic team of student-assistants and regular employees. You can find us at REC B7.08, and you’re free to walk in. Usually there is someone available at the office from Mondays to Thursdays.</em></span>
                         </a>
