--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -358,7 +358,7 @@ MASTERPLAN DIGITAAL TOETSEN
                 <tbody>
                     <tr>
                         <td style="width: 19.3883%;">
-                            <p style="text-align: center;"><span style="color: #3598db; font-size: 17pt;"> <span style="color: #000000;"><strong>Workshop multiple choice questions</strong> </span> </span></p>
+                            <p style="text-align: center;"><span style="color: #3598db; font-size: 17pt;"> <span style="color: #000000;"><strong>Workshop designing tests</strong> </span> </span></p>
                             <p>&nbsp;</p>
                         </td>
                         <td style="width: 4.404%;">
@@ -370,7 +370,7 @@ MASTERPLAN DIGITAAL TOETSEN
                                     <li><span style="color: #ffffff;"><strong>Harry Molkenboer</strong></span></li>
                                 </ul>
                                 <ul class="pill" style="background: #6dd1ce; margin-top: 20px; margin-right: 8px;">
-                                    <li><span style="color: #ffffff;"><strong>Multiple choice questions</strong></span></li>
+                                    <li><span style="color: #ffffff;"><strong>Workshop</strong></span></li>
                                 </ul>
                                 <ul class="pill" style="background: #6dd1ce; margin-top: 20px; margin-right: 8px;">
                                     <li><span style="color: #ffffff;"><strong>Instruction videos</strong></span></li>
